05.04.2022
Version 1.16.5-1.0.8.1
* Added option to replace skeletons in overworld with zombies;
* Random zombies never turn into chestheads anymore;
* Random zombies now turn into zombie villagers sometimes;
* Random zombies turn into frozen lumberjacks only in snowy biomes;
* All modded zombies now drop something useful instead of rotten flesh by default;
* Chestheads by default drop rotten flesh and oak planks;
* Reduced buffs on miners & warriors by 1;
* Tough zombie buffs now are removed and re-applied on world load, to prevent effect accumulation;
* Zombie senses now are somewhat pre-configured by default;

31.03.2022
Version 1.16.5-1.0.8.0
* Added cactus farm structure;
* Added Heisenberg - hazmat zombie with special buff/debuff combo that always infects;
* Added Pricky - zombie villager with special buff/debuff combo that can insta-gib most players;
* Added composite bricks. Alloy of netherrack and end stone (uncraftable at this moment), is really
  hard to break even with netherite pickaxe but can be blown up.
* Added netherite door. Not craftable. Requires redstone but not works (intentionally!) if has slime block buried below.
  Can be blown up if necessary, but is as hard to break manually as composite bricks;
* Added random zombie spawn egg, useful to create all-in-one spawners;
* (hopefully) fixed ArrayIndexOutOfBounds crash on chesthead deaths;

03.03.2022
Version 1.16.5-1.0.6.0
* Added feral mode - zombies will attack ALL non-undead entities
* Added creeper protection - in feral mode, zombies attack creepers too,
  but creepers don't explode. Instead, they get infected.
* Reformatted changelog to keep latest updates on top

09.11.2021
* Added zombie dolphin
* Zombies now are attracted by block placement, block breaking, anvil usage, note blocks and explosions.

17.10.2021
* Added chesthead
* Reduced zombie ambient volume
* Added german translation
* "Zombies not burn in sun" feature rewritten from scratch

12.09.2021
Version 1.16.5-1.0.4.0