@@ -1,50 +1,0 @@
-package com.madalchemist.zombienation.zombies;
-
-import com.madalchemist.zombienation.ConfigHandler;
-import com.madalchemist.zombienation.SoundsRegistry;
-import com.madalchemist.zombienation.animals.BrownBearEntity;
-import net.minecraft.block.BlockState;
-import net.minecraft.entity.EntityType;
-import net.minecraft.entity.ai.goal.NearestAttackableTargetGoal;
-import net.minecraft.entity.monster.ZombieEntity;
-import net.minecraft.entity.passive.PolarBearEntity;
-import net.minecraft.entity.passive.horse.HorseEntity;
-import net.minecraft.util.DamageSource;
-import net.minecraft.util.SoundEvent;
-import net.minecraft.util.SoundEvents;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.world.World;
-
-
-public class Cyberzombie extends ZombieEntity {
-
-    public Cyberzombie(EntityType<? extends Cyberzombie> zombie, World world) {
-        super(zombie, world);
-    }
-
-    @Override
-    protected boolean isSunSensitive() {
-        return false;
-    }
-
-    protected SoundEvent getAmbientSound() {
-        return SoundEvents.PILLAGER_AMBIENT;
-    }
-    protected SoundEvent getHurtSound(DamageSource p_184601_1_) {
-        return SoundEvents.ZOMBIE_HURT;
-    }
-    protected SoundEvent getDeathSound() {
-        return SoundEvents.ZOMBIE_DEATH;
-    }
-    protected SoundEvent getStepSound() {
-        return SoundEvents.ZOMBIE_STEP;
-    }
-    protected void playStepSound(BlockPos p_180429_1_, BlockState p_180429_2_) {
-        this.playSound(this.getStepSound(), 0.15F, 1.0F);
-    }
-
-    @Override
-    public void registerGoals() {
-
-    }
-}
